# cpp-project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
cmake/: catch.cmake  cxxopts.cmake
src/cmd/: add_main.cc
src/lib/: add.h
test/: CMakeLists.txt  add_test.cc
